--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "node-sass-middleware": "^0.11.0",
     "pug": "2.0.0-beta11",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.5.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
