--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.2.13",
+    "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.3",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "pug": "2.0.0-beta11",
     "scss": "^0.2.4"
   },
