--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mongoose": "^5.2.13",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-sass": "^4.9.3",
     "node-sass-middleware": "^0.11.0",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
