--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
+    "ejs-lint": "^0.3.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
@@ -20,6 +21,7 @@
     "node-sass": "^4.9.3",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.18.4",
+    "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
