--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.6.1",
     "ejs-lint": "^0.3.0",
     "express": "~4.16.0",
+    "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.13",
@@ -20,7 +21,6 @@
     "multer": "^1.3.1",
     "node-sass": "^4.9.3",
     "node-sass-middleware": "^0.11.0",
-    "nodemon": "^1.18.4",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
