--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "ejs-lint": "^0.3.0",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.2.13",
-    "mongoose-unique-validator": "^2.0.1",
-    "morgan": "~1.9.0",
-    "multer": "^1.3.1",
-    "node-sass": "^4.9.3",
+    "mongoose": "^5.3.15",
+    "mongoose-unique-validator": "^2.0.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
@@ -29,11 +29,11 @@
     "scss": "^0.2.4"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
+    "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0"
   }
 }
