--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
+    "http": "0.0.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.15",
     "mongoose-unique-validator": "^2.0.2",
@@ -27,7 +28,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pug": "2.0.0-beta11",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
