--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "http": "0.0.0",
     "http-errors": "~1.6.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.3.15",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
