--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "bcrypt": "^3.0.2",
+    "connect-redis": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
@@ -29,6 +30,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pug": "2.0.0-beta11",
+    "query-string": "^6.2.0",
     "scss": "^0.2.4",
     "socket.io": "^2.2.0"
   },
